# NeuralForge

./: .editorconfig  .flake8  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: api-reference.md  contributing.md  index.md  installation.md
examples/: cifar_search.py  quickstart.py
neuralforge/: __init__.py  version.py
neuralforge/algorithms/: __init__.py  base.py  darts.py  evolution.py  random_search.py
neuralforge/contrib/: __init__.py  lightning.py
neuralforge/core/: __init__.py  genotypes.py  operations.py  search_space.py
neuralforge/distributed/: __init__.py  population.py
neuralforge/surrogate/: __init__.py  predictor.py
neuralforge/utils/: __init__.py  augmentations.py  profiling.py  visualization.py
tests/: conftest.py  test_darts.py  test_evolution.py  test_genotypes.py  test_integration.py  test_operations.py  test_profiling.py  test_search_space.py
